Refactor attribute list component and fix device loading issue.
- Fixes an issue where the device was not loaded properly in the attribute list component.
- Refactors the code to load attributes and get devices using the device service.
- Adds a method to get device attributes using the device ID.

--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -115,6 +115,7 @@
     </form>
   </div>
 </div>
+<div>{{ attributeComponent }} {{ attributeComponentId }}</div>
 <app-attribute-list [attributeComponent]="attributeComponent"
-  [attributeComponentId]="attributeComponentId"></app-attribute-list>
+  [attributeComponentId]="device"></app-attribute-list>
 <app-log [component]="component"></app-log>
