--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
       <a class="nav-link" routerLink="/home" routerLinkActive="active fluffy" ariaCurrentWhenActive="page">Home</a>
       <a class="nav-link" routerLink="/cube" routerLinkActive="active" ariaCurrentWhenActive="page"><i
         class="bi bi-box"></i> Cube</a>
+      <a class="nav-link" routerLink="/floor-list" routerLinkActive="active"
+        ariaCurrentWhenActive="page"><i class="bi bi-building"></i> Floors</a>
       <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i class="bi bi-hdd"></i> Devices</a>
       <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i
           class="bi bi-motherboard"></i> Models</a>
