feat(edit-device): Add form validation and error handling
- Added form validation for device's name, x, y, and h fields in the edit-device component.
- Updated the HTML template to display validation feedback messages for the name field.
- Updated the HTML template to display validation feedback messages for the x, y, and h fields.

--- a/src/app/components/attribute/attribute-list/attribute-list.component.html
+++ b/src/app/components/attribute/attribute-list/attribute-list.component.html
@@ -68,12 +68,14 @@
     <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="AddAttribute()">
       <i class="bi bi-plus-lg"></i> Add
     </button>
+
   </div>
   <pagination-controls (pageChange)="attributePage = $event" id="attributeListPagination"></pagination-controls>
 </div>
 
-<div>attributeComponentId in AttributeList: {{ attributeComponent }}</div>
-<div>attributeComponentId in AttributeList: {{ attributeComponentId }}</div>
-<div>(attributeComponent == '') {{ attributeComponent == '' }}</div>
+<!-- <div>attributeComponent: {{ this.attributeComponent }}</div>
+<div>attributeComponentObject: {{ this.attributeComponentObject }}</div>
+<div>(attributeComponent == '') {{ attributeComponent == '' }}</div> -->
 
-<app-log *ngIf="attributeComponent == ''" [component]="component"></app-log>
+<app-log *ngIf="attributeComponent == ''" [attributeComponentObject]="this.device"
+  [component]="component"></app-log>
