--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -5,8 +5,16 @@
       <div class="row">
         <div class="col">
           <label for="id" class="form-label">Id</label>
-          <input type="text" class="form-control" placeholder="Id" aria-label="id" formControlName="id"
-            formControlName="id" id="id" readonly [ngClass]="{
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Id"
+            aria-label="id"
+            formControlName="id"
+            formControlName="id"
+            id="id"
+            readonly
+            [ngClass]="{
               'is-invalid': this.editDeviceForm.controls.id.status != 'VALID',
               'is-valid': this.editDeviceForm.controls.id.status == 'VALID',
               'form-control': true
@@ -19,16 +27,24 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="name" class="form-label">Name</label>
-            <input type="text" class="form-control" placeholder="Device's name" aria-label="name"
-              formControlName="name" minlength="4" id="name" required maxlength="255" [ngClass]="{
+            <input
+              type="text"
+              class="form-control"
+              placeholder="Device's name"
+              aria-label="name"
+              formControlName="name"
+              minlength="4"
+              id="name"
+              required
+              maxlength="255"
+              [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.name.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.name.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.editDeviceForm.controls.name.errors" class="invalid-feedback">
               <div *ngIf="this.editDeviceForm.controls.name.errors.required">Name is required</div>
-              <div *ngIf="this.editDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters
-              </div>
+              <div *ngIf="this.editDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
             </div>
           </div>
         </div>
@@ -38,7 +54,13 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="x" class="form-label">x</label>
-            <input type="text" formControlName="x" class="form-control" id="x" required [ngClass]="{
+            <input
+              type="text"
+              formControlName="x"
+              class="form-control"
+              id="x"
+              required
+              [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.position.controls.x.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.position.controls.x.status == 'VALID',
                 'form-control': true
@@ -51,7 +73,13 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="y" class="form-label">y</label>
-            <input type="text" formControlName="y" class="form-control" id="y" required [ngClass]="{
+            <input
+              type="text"
+              formControlName="y"
+              class="form-control"
+              id="y"
+              required
+              [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.position.controls.y.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.position.controls.y.status == 'VALID',
                 'form-control': true
@@ -64,15 +92,20 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="h" class="form-label">h</label>
-            <input type="text" formControlName="h" class="form-control" id="h" required [ngClass]="{
+            <input
+              type="text"
+              formControlName="h"
+              class="form-control"
+              id="h"
+              required
+              [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.position.controls.h.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.position.controls.h.status == 'VALID',
                 'form-control': true
               }" />
           </div>
           <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError" class="invalid-feedback">
-            <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError('required')">Name is required
-            </div>
+            <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError('required')">Name is required</div>
           </div>
         </div>
       </div>
@@ -80,8 +113,13 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="modelId" class="form-label">Model</label>
-            <select (change)="changeModelId($event)" formControlName="modelId" class="form-control" id="modelId"
-              required [ngClass]="{
+            <select
+              (change)="changeModelId($event)"
+              formControlName="modelId"
+              class="form-control"
+              id="modelId"
+              required
+              [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.modelId.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.modelId.status == 'VALID',
                 'form-select': true
@@ -97,10 +135,13 @@
         </div>
       </div>
       <div class="form-group mb-3">
-        <button type="submit" [disabled]="!(editDeviceForm.valid && editDeviceForm.touched)"
-          class="btn btn-primary" [ngClass]="{
+        <button
+          type="submit"
+          [disabled]="!(editDeviceForm.valid && editDeviceForm.touched)"
+          class="btn btn-primary"
+          [ngClass]="{
             'is-invalid': !(editDeviceForm.valid && editDeviceForm.touched),
-            'is-valid': (editDeviceForm.valid && editDeviceForm.touched),
+            'is-valid': editDeviceForm.valid && editDeviceForm.touched,
             'form-control': true
           }">
           Update
@@ -115,7 +156,10 @@
     </form>
   </div>
 </div>
-<div>{{ attributeComponent }} {{ attributeComponentId }}</div>
-<app-attribute-list [attributeComponent]="attributeComponent"
-  [attributeComponentId]="device"></app-attribute-list>
+
+<!-- <div>attributeComponent: {{ attributeComponent }}</div>
+<div>attributeComponentObject: {{ attributeComponentObject }}</div> -->
+
+<app-attribute-list [attributeComponent]="attributeComponent" [attributeComponentObject]="attributeComponentObject"></app-attribute-list>
+
 <app-log [component]="component"></app-log>
