Update buttons and option labels in edit forms, and remove console.log statement in log component.

--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -100,7 +100,7 @@
         type="submit"
         [disabled]="!(this.editConnectionForm.valid && this.editConnectionForm.touched)"
         class="btn btn-primary">
-        <i class="bi bi-pencil-square"></i> Edit connection
+        <i class="bi bi-pencil-square"></i> Update
       </button>
       <div *ngIf="!(this.editConnectionForm.valid && this.editConnectionForm.touched)" class="invalid-feedback">
         Form is invalid
