--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -125,7 +125,7 @@
                 'form-select': true
               }">
               <option *ngFor="let modelObj of this.modelList; let i = index" value="{{ modelObj.id }}">
-                {{ modelObj.name }}
+                {{ modelObj.name }} ({{ modelObj.type }}/{{ modelObj.category }})
               </option>
             </select>
             <div *ngIf="this.editDeviceForm.controls.modelId.errors" class="invalid-feedback">
