--- a/src/app/components/floors/floor-list/floor-list.component.html
+++ b/src/app/components/floors/floor-list/floor-list.component.html
@@ -1,1 +1,48 @@
-<p>floor-list works!</p>
+<div class="container">
+  <h3><i class="bi bi-hdd"></i> Floors</h3>
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th scope="col">Name</th>
+        <th scope="col">Adress</th>
+        <th scope="col">Dimension</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr
+        *ngFor="
+          let floor of floorList
+            | paginate
+              : {
+                  id: 'floorPagination',
+                  itemsPerPage: 5,
+                  currentPage: floorListPage
+                }
+        ">
+
+        <td tooltip="{{ floor.id }}">{{ floor.name }}</td>
+        <td>Adress: {{ floor.adress.street }}, {{ floor.adress.postcode }} {{ floor.adress.country }}</td>
+        <td><div *ngFor="let dimension of floor.dimension">x: {{ dimension.x }}, y: {{ dimension.y }}, h: {{ dimension.h }}</div></td>
+        <td>
+          <div class="btn-group" role="group" aria-label="device-operations">
+            <button type="button" class="btn btn-success btn-sm move-right" id="edit-device" (click)="editFloor(floor)">
+              Edit
+            </button>
+            <button type="button" id="delete-device" class="btn btn-danger btn-sm" (click)="deleteFloor(floor.id)">
+              Delete
+            </button>
+            <button type="button" id="clone-device" class="btn btn-info btn-sm" (click)="cloneFloor(floor.id)">
+              Clone
+            </button>
+          </div>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <button type="button" class="btn btn-success btn-sm move-right mb-3" (click)="addFloor()">
+    <i class="bi bi-plus-lg"></i> Add
+  </button>
+  <pagination-controls (pageChange)="floorListPage = $event" id="floorPagination"></pagination-controls>
+</div>
+
+<app-log [component]="component"></app-log>
