--- a/src/app/components/floors/edit-floor/edit-floor.component.html
+++ b/src/app/components/floors/edit-floor/edit-floor.component.html
@@ -1,1 +1,177 @@
-<p>edit-floor works!</p>
+<div class="container">
+  <h3><i class="bi bi-building"></i> Edit Floor</h3>
+  <form [formGroup]="floorForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
+    <div class="form-group mb-3">
+      <label>Id: {{ this.floorForm.controls.id.value }} </label>
+    </div>
+    <div class="col border">
+      <div class="form-group mb-3">
+        <label>Name</label>
+        <textarea
+          formControlName="name"
+          rows="2"
+          minlength="4"
+          maxlength="50"
+          required
+          [ngClass]="{
+            'is-invalid': this.floorForm.controls.name.status != 'VALID',
+            'is-valid': this.floorForm.controls.name.status == 'VALID',
+            'form-select': true
+          }"></textarea>
+        <div *ngIf="this.floorForm.controls.name.errors" class="invalid-feedback">
+          <div *ngIf="this.floorForm.controls.name.errors.required">Name is required</div>
+          <div *ngIf="this.floorForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
+        </div>
+      </div>
+
+      <div formGroupName="adress">
+        <div class="row">
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="street" class="form-label">street</label>
+              <input
+                type="text"
+                formControlName="street"
+                id="street"
+                required
+                [ngClass]="{
+                  'is-invalid': this.floorForm.controls.adress.controls.street.status != 'VALID',
+                  'is-valid': this.floorForm.controls.adress.controls.street.status == 'VALID',
+                  'form-control': true
+                }" />
+              <div *ngIf="this.floorForm.controls.adress.controls.street.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.adress.controls.street.errors.required">street is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.street.errors.minlength">
+                  street must be at least 1 characters
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="country" class="form-label">country</label>
+              <input
+                type="text"
+                formControlName="country"
+                id="country"
+                required
+                [ngClass]="{
+                  'is-invalid': this.floorForm.controls.adress.controls.country.status != 'VALID',
+                  'is-valid': this.floorForm.controls.adress.controls.country.status == 'VALID',
+                  'form-control': true
+                }" />
+              <div *ngIf="this.floorForm.controls.adress.controls.country.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.adress.controls.country.errors.required">country is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.country.errors.minlength">
+                  country must be at least 1 characters
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="postcode" class="form-label">postcode</label>
+              <input
+                type="text"
+                formControlName="postcode"
+                id="postcode"
+                required
+                [ngClass]="{
+                  'is-invalid': this.floorForm.controls.adress.controls.postcode.status != 'VALID',
+                  'is-valid': this.floorForm.controls.adress.controls.postcode.status == 'VALID',
+                  'form-control': true
+                }" />
+              <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors.required">code is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors.minlength">
+                  Postcode must be at least 5 characters
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="form-group mb-3">
+      <label>Description</label>
+      <textarea
+        formControlName="description"
+        rows="2"
+        minlength="4"
+        maxlength="50"
+        required
+        [ngClass]="{
+          'is-invalid': this.floorForm.controls.description.status != 'VALID',
+          'is-valid': this.floorForm.controls.description.status == 'VALID',
+          'form-select': true
+        }"></textarea>
+      <div *ngIf="this.floorForm.controls.description.errors" class="invalid-feedback">
+        <div *ngIf="this.floorForm.controls.description.errors.required">description is required</div>
+        <div *ngIf="this.floorForm.controls.description.errors.minlength">
+          description must be at least 4 characters
+        </div>
+      </div>
+    </div>
+
+    <h3>Add Dimensions</h3>
+
+    <div class="border">
+      <div formArrayName="dimension">
+        <div *ngFor="let dimensionForm of dimension.controls; let i = index">
+          <div formGroupName="{{ i }}">
+            <div class="row">
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="x_pos" class="form-label">x_pos</label>
+                  <input type="text" formControlName="x_pos" id="x_pos" required [ngClass]="{}" />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="y_pos" class="form-label">y_pos</label>
+                  <input type="text" formControlName="y_pos" id="y_pos" required [ngClass]="{}" />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="h_pos" class="form-label">h_pos</label>
+                  <input type="text" formControlName="h_pos" id="h_pos" required [ngClass]="{}" />
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="x" class="form-label">x</label>
+                  <input type="text" formControlName="x" id="x" required [ngClass]="{}" />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="y" class="form-label">y</label>
+                  <input type="text" formControlName="y" id="y" required [ngClass]="{}" />
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="h" class="form-label">h</label>
+                  <input type="text" formControlName="h" id="h" required [ngClass]="{}" />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <p>Form Status: {{ floorForm.status }}</p>
+    <!-- <p>Form Values: {{ toString(floorForm.value) }}</p> -->
+    <div class="form-group mb-3">
+      <button type="submit" [disabled]="!(floorForm.valid && floorForm.touched)" class="btn btn-primary mb-3">
+        <i class="bi bi-save"></i> Update
+      </button>
+    </div>
+  </form>
+</div>
+
+<app-log [component]="component"></app-log>
