--- a/src/app/components/floors/add-floor/add-floor.component.html
+++ b/src/app/components/floors/add-floor/add-floor.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3><i class="bi bi-hdd"></i> Add Floor</h3>
+  <h3><i class="bi bi-building"></i> Add Floor</h3>
   <form [formGroup]="floorForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
     <div class="form-group mb-3">
       <label>Id: {{ this.floorForm.controls.id.value }} </label>
@@ -12,12 +12,12 @@
           formControlName="name"
           rows="2"
           minlength="4"
-          maxlength="50"
+          maxlength="4000"
           required
           [ngClass]="{
             'is-invalid': this.floorForm.controls.name.status != 'VALID',
             'is-valid': this.floorForm.controls.name.status == 'VALID',
-            'form-select': true
+            'form-control': true
           }"></textarea>
         <div *ngIf="this.floorForm.controls.name.errors" class="invalid-feedback">
           <div *ngIf="this.floorForm.controls.name.errors.required">Name is required</div>
@@ -29,7 +29,7 @@
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label for="street" class="form-label">street</label>
+              <label for="street" class="form-label">Street</label>
               <input
                 type="text"
                 formControlName="street"
@@ -50,7 +50,28 @@
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label for="country" class="form-label">country</label>
+              <label for="city" class="form-label">City</label>
+              <input
+                type="text"
+                formControlName="city"
+                id="city"
+                required
+                [ngClass]="{
+                  'is-invalid': this.floorForm.controls.adress.controls.city.status != 'VALID',
+                  'is-valid': this.floorForm.controls.adress.controls.city.status == 'VALID',
+                  'form-control': true
+                }" />
+              <div *ngIf="this.floorForm.controls.adress.controls.city.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.adress.controls.city.errors.required">City is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.city.errors.minlength">
+                  City must be at least 1 characters
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="country" class="form-label">Country</label>
               <input
                 type="text"
                 formControlName="country"
@@ -94,33 +115,40 @@
       </div>
     </div>
 
-    <div class="form-group mb-3">
-      <label>Description</label>
-      <textarea
-        formControlName="description"
-        rows="2"
-        minlength="4"
-        maxlength="50"
-        required
-        [ngClass]="{
-          'is-invalid': this.floorForm.controls.description.status != 'VALID',
-          'is-valid': this.floorForm.controls.description.status == 'VALID',
-          'form-select': true
-        }"></textarea>
-      <div *ngIf="this.floorForm.controls.description.errors" class="invalid-feedback">
-        <div *ngIf="this.floorForm.controls.description.errors.required">description is required</div>
-        <div *ngIf="this.floorForm.controls.description.errors.minlength">
-          description must be at least 4 characters
-        </div>
-      </div>
-    </div>
-
-    <h3>Add Dimensions</h3>
+    <h4>Add Dimensions</h4>
 
     <div class="border">
       <div formArrayName="dimension">
         <div *ngFor="let dimensionForm of dimension.controls; let i = index">
           <div formGroupName="{{ i }}">
+            <div class="row">
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label>Description</label>
+                  <textarea
+                    formControlName="description"
+                    rows="2"
+                    minlength="4"
+                    maxlength="4000"
+                    required
+                    [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.description.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.description.status == 'VALID',
+                      'form-control': true
+                    }"></textarea>
+                  <div
+                    *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors?.required">
+                      description is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors?.minlength">
+                      description must be at least 4 characters
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
             <div class="row">
               <div class="col">
                 <div class="form-group mb-3">
@@ -257,13 +285,22 @@
                 </div>
               </div>
             </div>
-            <div class="grid gap-3">
-              <button type="button" (click)="addDimension()" class="btn btn-secondary p-1 g-col-3">
-                <i class="bi bi-file-earmark-plus"></i> Add Dimension
-              </button>
-              <button type="button" (click)="addDimension()" class="btn btn-warning p-1 g-col-3">
-                <i class="bi bi-file-earmark-minus"></i> Delete Dimension
-              </button>
+            <div class="d-flex p-2">
+              <div class="p-1 g-col-1">
+                <button type="button" (click)="addDimension()" class="btn btn-secondary">
+                  <i class="bi bi-file-earmark-plus"></i> Add Dimension
+                </button>
+              </div>
+              <div class="p-1 g-col-1 column-gap-3">
+                <button type="button" (click)="deleteDimension(i)" class="btn btn-warning">
+                  <i class="bi bi-file-earmark-minus"></i> Delete Dimension
+                </button>
+              </div>
+              <div class="p-1 g-col-1 column-gap-3">
+                <button type="button" (click)="this.generateDimension(i)" class="btn btn-debug">
+                  <i class="bi bi-bookmark-plus"></i> Generate random Dimension {{ i }}
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -273,10 +310,17 @@
         <p>
           Form Values: <code>{{ toText(floorForm.value) }}</code>
         </p>
-        <div class="form-group mb-3">
-          <button type="submit" [disabled]="!(floorForm.valid && floorForm.touched)" class="btn btn-primary mb-3">
-            <i class="bi bi-save"></i> Save
-          </button>
+        <div class="d-flex p-2">
+          <div class="p-1 g-col-1">
+            <button type="submit" [disabled]="!(floorForm.valid && floorForm.touched)" class="btn btn-primary mb-3">
+              <i class="bi bi-save"></i> Save
+            </button>
+          </div>
+          <div class="p-1 g-col-1">
+            <button type="button" (click)="generateFloor()" class="btn btn-debug">
+              <i class="bi bi-bookmark-plus"></i> Generate random data
+            </button>
+          </div>
         </div>
       </div>
     </div>
