--- a/src/app/components/floors/edit-floor/edit-floor.component.html
+++ b/src/app/components/floors/edit-floor/edit-floor.component.html
@@ -2,18 +2,12 @@
   <h3><i class="bi bi-building"></i> Edit Floor</h3>
   <form [formGroup]="floorForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
     <div class="form-group mb-3">
-      <label>Id: {{ this.floorForm.controls.id.value }} </label>
+      <label>Id: {{ this.floorForm.controls.id.value }}</label>
     </div>
     <div class="col border">
       <div class="form-group mb-3">
         <label>Name</label>
-        <textarea
-          formControlName="name"
-          rows="2"
-          minlength="4"
-          maxlength="50"
-          required
-          [ngClass]="{
+        <textarea formControlName="name" rows="2" minlength="4" maxlength="50" required [ngClass]="{
             'is-invalid': this.floorForm.controls.name.status != 'VALID',
             'is-valid': this.floorForm.controls.name.status == 'VALID',
             'form-select': true
@@ -28,19 +22,15 @@
         <div class="row">
           <div class="col">
             <div class="form-group mb-3">
-              <label for="street" class="form-label">street</label>
-              <input
-                type="text"
-                formControlName="street"
-                id="street"
-                required
-                [ngClass]="{
+              <label for="street" class="form-label">Street</label>
+              <input type="text" formControlName="street" id="street" required [ngClass]="{
                   'is-invalid': this.floorForm.controls.adress.controls.street.status != 'VALID',
                   'is-valid': this.floorForm.controls.adress.controls.street.status == 'VALID',
                   'form-control': true
                 }" />
               <div *ngIf="this.floorForm.controls.adress.controls.street.errors" class="invalid-feedback">
-                <div *ngIf="this.floorForm.controls.adress.controls.street.errors.required">street is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.street.errors.required">street is required
+                </div>
                 <div *ngIf="this.floorForm.controls.adress.controls.street.errors.minlength">
                   street must be at least 1 characters
                 </div>
@@ -49,19 +39,31 @@
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label for="country" class="form-label">country</label>
-              <input
-                type="text"
-                formControlName="country"
-                id="country"
-                required
-                [ngClass]="{
+              <label for="city" class="form-label">City</label>
+              <input type="text" formControlName="city" id="city" required [ngClass]="{
+                  'is-invalid': this.floorForm.controls.adress.controls.city.status != 'VALID',
+                  'is-valid': this.floorForm.controls.adress.controls.city.status == 'VALID',
+                  'form-control': true
+                }" />
+              <div *ngIf="this.floorForm.controls.adress.controls.city.errors" class="invalid-feedback">
+                <div *ngIf="this.floorForm.controls.adress.controls.city.errors.required">City is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.city.errors.minlength">
+                  City must be at least 1 characters
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="form-group mb-3">
+              <label for="country" class="form-label">Country</label>
+              <input type="text" formControlName="country" id="country" required [ngClass]="{
                   'is-invalid': this.floorForm.controls.adress.controls.country.status != 'VALID',
                   'is-valid': this.floorForm.controls.adress.controls.country.status == 'VALID',
                   'form-control': true
                 }" />
               <div *ngIf="this.floorForm.controls.adress.controls.country.errors" class="invalid-feedback">
-                <div *ngIf="this.floorForm.controls.adress.controls.country.errors.required">country is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.country.errors.required">country is required
+                </div>
                 <div *ngIf="this.floorForm.controls.adress.controls.country.errors.minlength">
                   country must be at least 1 characters
                 </div>
@@ -70,19 +72,15 @@
           </div>
           <div class="col">
             <div class="form-group mb-3">
-              <label for="postcode" class="form-label">postcode</label>
-              <input
-                type="text"
-                formControlName="postcode"
-                id="postcode"
-                required
-                [ngClass]="{
+              <label for="postcode" class="form-label">Postcode</label>
+              <input type="text" formControlName="postcode" id="postcode" required [ngClass]="{
                   'is-invalid': this.floorForm.controls.adress.controls.postcode.status != 'VALID',
                   'is-valid': this.floorForm.controls.adress.controls.postcode.status == 'VALID',
                   'form-control': true
                 }" />
               <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors" class="invalid-feedback">
-                <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors.required">code is required</div>
+                <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors.required">code is required
+                </div>
                 <div *ngIf="this.floorForm.controls.adress.controls.postcode.errors.minlength">
                   Postcode must be at least 5 characters
                 </div>
@@ -92,30 +90,7 @@
         </div>
       </div>
     </div>
-
-    <div class="form-group mb-3">
-      <label>Description</label>
-      <textarea
-        formControlName="description"
-        rows="2"
-        minlength="4"
-        maxlength="50"
-        required
-        [ngClass]="{
-          'is-invalid': this.floorForm.controls.description.status != 'VALID',
-          'is-valid': this.floorForm.controls.description.status == 'VALID',
-          'form-select': true
-        }"></textarea>
-      <div *ngIf="this.floorForm.controls.description.errors" class="invalid-feedback">
-        <div *ngIf="this.floorForm.controls.description.errors.required">description is required</div>
-        <div *ngIf="this.floorForm.controls.description.errors.minlength">
-          description must be at least 4 characters
-        </div>
-      </div>
-    </div>
-
-    <h3>Add Dimensions</h3>
-
+    <h4>Dimension</h4>
     <div class="border">
       <div formArrayName="dimension">
         <div *ngFor="let dimensionForm of dimension.controls; let i = index">
@@ -123,55 +98,166 @@
             <div class="row">
               <div class="col">
                 <div class="form-group mb-3">
-                  <label for="x_pos" class="form-label">x_pos</label>
-                  <input type="text" formControlName="x_pos" id="x_pos" required [ngClass]="{}" />
-                </div>
-              </div>
-              <div class="col">
-                <div class="form-group mb-3">
-                  <label for="y_pos" class="form-label">y_pos</label>
-                  <input type="text" formControlName="y_pos" id="y_pos" required [ngClass]="{}" />
-                </div>
-              </div>
-              <div class="col">
-                <div class="form-group mb-3">
-                  <label for="h_pos" class="form-label">h_pos</label>
-                  <input type="text" formControlName="h_pos" id="h_pos" required [ngClass]="{}" />
+                  <label>Description</label>
+                  <textarea formControlName="description" rows="2" minlength="4" maxlength="4000" required
+                    [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.description.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.description.status == 'VALID',
+                      'form-control': true
+                    }"></textarea>
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors?.required">
+                      description is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.description.errors?.minlength">
+                      description must be at least 4 characters
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col">
                 <div class="form-group mb-3">
-                  <label for="x" class="form-label">x</label>
-                  <input type="text" formControlName="x" id="x" required [ngClass]="{}" />
+                  <label for="x_pos" class="form-label">X position</label>
+                  <input type="text" formControlName="x_pos" id="x_pos" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.x_pos.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.x_pos.status == 'VALID',
+                      'form-control': true
+                    }" />
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x_pos.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x_pos.errors?.required">
+                      X position is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x_pos.errors?.minlength">
+                      X position must be at least 1 characters
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col">
                 <div class="form-group mb-3">
-                  <label for="y" class="form-label">y</label>
-                  <input type="text" formControlName="y" id="y" required [ngClass]="{}" />
+                  <label for="y_pos" class="form-label">Y position</label>
+                  <input type="text" formControlName="y_pos" id="y_pos" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.y_pos.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.y_pos.status == 'VALID',
+                      'form-control': true
+                    }" />
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y_pos.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y_pos.errors?.required">
+                      Y is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y_pos.errors?.minlength">
+                      Y must be at least 1 characters
+                    </div>
+                  </div>
                 </div>
               </div>
               <div class="col">
                 <div class="form-group mb-3">
-                  <label for="h" class="form-label">h</label>
-                  <input type="text" formControlName="h" id="h" required [ngClass]="{}" />
+                  <label for="h_pos" class="form-label">H position</label>
+                  <input type="text" formControlName="h_pos" id="h_pos" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.h_pos.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.h_pos.status == 'VALID',
+                      'form-control': true
+                    }" />
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h_pos.errors"
+                    class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h_pos.errors?.required">
+                      H is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h_pos.errors?.minlength">
+                      H must be at least 1 characters
+                    </div>
+                  </div>
                 </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="x" class="form-label">X</label>
+                  <input type="text" formControlName="x" id="x" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.x.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.x.status == 'VALID',
+                      'form-control': true
+                    }" />
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors" class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.required">X is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.x.errors?.minlength">
+                      X must be at least 1 characters
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="y" class="form-label">Y</label>
+                  <input type="text" formControlName="y" id="y" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.y.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.y.status == 'VALID',
+                      'form-control': true
+                    }" />
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors" class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.required">Y is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.y.errors?.minlength">
+                      Y must be at least 1 characters
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="form-group mb-3">
+                  <label for="h" class="form-label">H</label>
+                  <input type="text" formControlName="h" id="h" required [ngClass]="{
+                      'is-invalid': this.floorForm.controls.dimension.at(i).controls.h.status != 'VALID',
+                      'is-valid': this.floorForm.controls.dimension.at(i).controls.h.status == 'VALID',
+                      'form-control': true
+                    }" />
+                  <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors" class="invalid-feedback">
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.required">h is required
+                    </div>
+                    <div *ngIf="this.floorForm.controls.dimension.at(i).controls.h.errors?.minlength">
+                      h must be at least 1 characters
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="d-flex p-2">
+              <div class="p-1 g-col-1">
+                <button type="button" (click)="addDimension()" class="btn btn-secondary">
+                  <i class="bi bi-file-earmark-plus"></i> Add Dimension
+                </button>
+              </div>
+              <div class="p-1 g-col-1 column-gap-3">
+                <button type="button" (click)="deleteDimension(i)" class="btn btn-warning">
+                  <i class="bi bi-file-earmark-minus"></i> Delete Dimension
+                </button>
+              </div>
+              <div class="p-1 g-col-1 column-gap-3">
+                <button type="button" (click)="this.generateDimension(i)" class="btn btn-debug">
+                  <i class="bi bi-bookmark-plus"></i> Generate random Dimension {{ i }}
+                </button>
               </div>
             </div>
           </div>
         </div>
+
+        <p>Form Status: {{ floorForm.status }}</p>
+        <!-- <p>Form Values: {{ toString(floorForm.value) }}</p> -->
+        <div class="form-group mb-3">
+          <button type="submit" [disabled]="!(floorForm.valid && floorForm.touched)" class="btn btn-primary mb-3">
+            <i class="bi bi-save"></i> Update
+          </button>
+        </div>
       </div>
-    </div>
-    <p>Form Status: {{ floorForm.status }}</p>
-    <!-- <p>Form Values: {{ toString(floorForm.value) }}</p> -->
-    <div class="form-group mb-3">
-      <button type="submit" [disabled]="!(floorForm.valid && floorForm.touched)" class="btn btn-primary mb-3">
-        <i class="bi bi-save"></i> Update
-      </button>
     </div>
   </form>
 </div>
-
 <app-log [component]="component"></app-log>
