--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,31 +1,99 @@
-<header>
-  <nav class="navbar navbar-expand-sm p-2">
-    <div class="container-fluid nav nav-pills">
-      <a class="navbar-brand nav-link" id="title" routerLink="/home" routerLinkActive="active fluffy"
-        ariaCurrentWhenActive="page">3d inventory</a>
-      <a class="nav-link" routerLink="/home" routerLinkActive="active fluffy" ariaCurrentWhenActive="page">Home</a>
-      <a class="nav-link" routerLink="/cube" routerLinkActive="active" ariaCurrentWhenActive="page"><i
-        class="bi bi-box"></i> Cube</a>
-      <a class="nav-link" routerLink="/floor-list" routerLinkActive="active"
-        ariaCurrentWhenActive="page"><i class="bi bi-building"></i> Floors</a>
-      <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i class="bi bi-hdd"></i> Devices</a>
-      <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"><i
-          class="bi bi-motherboard"></i> Models</a>
-      <a class="nav-link" routerLink="/attribute-list" routerLinkActive="active"
-        ariaCurrentWhenActive="page"><i class="bi bi-bar-chart"></i> Attributes</a>
-      <a class="nav-link" routerLink="/attribute-dictionary-list" routerLinkActive="active"
-        ariaCurrentWhenActive="page"><i class="bi bi-grid-3x3-gap"></i> Attribute Dictionary</a>
-      <a class="nav-link" routerLink="/connection-list" routerLinkActive="active"
-        ariaCurrentWhenActive="page"><i class="bi bi-ethernet"></i> Connections</a>
-      <form class="d-flex">
-        <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" />
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
-  </nav>
-</header>
-<main>
-  <div class="container" style="max-width: 1920px">
-    <router-outlet></router-outlet>
-  </div>
-</main>
+<!doctype html>
+<html id="0" lang="en" [attr.data-bs-theme]="myTheme">
+  <head>
+    <meta charset="utf-8" />
+    <title>3d inventory</title>
+    <base href="/" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
+  <body class="d-grid">
+    <header>
+      <nav class="navbar navbar-expand-sm p-2">
+        <div class="container-fluid nav nav-pills">
+          <a
+            class="navbar-brand nav-link"
+            id="title"
+            routerLink="/home"
+            routerLinkActive="active fluffy"
+            ariaCurrentWhenActive="page"
+            >3d inventory</a
+          >
+          <a class="nav-link" routerLink="/cube" routerLinkActive="active fluffy" ariaCurrentWhenActive="page"
+            ><i class="bi bi-box"></i> Cube</a
+          >
+          <a class="nav-link" routerLink="/floor-list" routerLinkActive="active" ariaCurrentWhenActive="page"
+            ><i class="bi bi-building"></i> Floors</a
+          >
+          <a class="nav-link" routerLink="/device-list" routerLinkActive="active" ariaCurrentWhenActive="page"
+            ><i class="bi bi-hdd"></i> Devices</a
+          >
+          <a class="nav-link" routerLink="/models-list" routerLinkActive="active" ariaCurrentWhenActive="page"
+            ><i class="bi bi-motherboard"></i> Models</a
+          >
+          <a class="nav-link" routerLink="/attribute-list" routerLinkActive="active" ariaCurrentWhenActive="page"
+            ><i class="bi bi-bar-chart"></i> Attributes</a
+          >
+          <a
+            class="nav-link"
+            routerLink="/attribute-dictionary-list"
+            routerLinkActive="active"
+            ariaCurrentWhenActive="page"
+            ><i class="bi bi-grid-3x3-gap"></i> Attr. Dictionary</a
+          >
+          <a class="nav-link" routerLink="/connection-list" routerLinkActive="active" ariaCurrentWhenActive="page"
+            ><i class="bi bi-ethernet"></i> Connections</a
+          >
+          <form class="d-flex">
+            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search" />
+          </form>
+          <div class="form-check form-switch">
+            <input
+              (click)="themeSwitch()"
+              class="form-check-input column-gap-2"
+              type="checkbox"
+              id="flexSwitchCheckDefault"/>
+            <label class="form-check-label" for="flexSwitchCheckDefault"><i class="bi bi-brightness-high"></i></label>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main [attr.data-bs-theme]="myTheme">
+      <div class="container" style="max-width: 1920px">
+        <router-outlet></router-outlet>
+      </div>
+    </main>
+    <footer class="text-white" style="vertical-align: auto">
+      <div class="row d-flex align-items-center">
+        <div class="col-md-7 text-center text-md-start">
+          <div class="p-3">
+            © 2023 Copyright:
+            <a class="text-white" href="https://github.com/karol-preiskorn/3d-inventory">ultimasolution.pl</a>
+          </div>
+        </div>
+        <div class="col-md-5 text-center text-md-end">
+          <a
+            class="btn btn-floating m-1"
+            class="text-white"
+            role="button"
+            href="https://github.com/karol-preiskorn/3d-inventory-angular-ui">
+            <i class="bi bi-github" style="font-size: 1.2rem; color: rgb(82, 90, 105)"></i>
+          </a>
+          <a
+            class="btn btn-floating m-1"
+            class="text-white"
+            role="button"
+            href="https://www.ultimasolution.pl/3d-inventory/">
+            <i class="bi bi-wordpress" style="font-size: 1.2em; color: cornflowerblue"></i>
+          </a>
+          <a
+            class="btn btn-floating m-1"
+            class="text-white"
+            role="button"
+            href="https://www.facebook.com/ultimasolution">
+            <i class="bi bi-facebook" style="font-size: 1.2em; color: cornflowerblue"></i>
+          </a>
+        </div>
+      </div>
+    </footer>
+  </body>
+</html>
