--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,58 @@
-#title {
-  font-weight: bold;
+.container {
+  main {
+    background-color: var(--main-content-background-color);
+
+    h1 {
+      font-size: 70px;
+      color: var(--main-content-text-color);
+    }
+  }
+
+  .theme {
+    .slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: var(--header-theme-switch-background-color);
+      -webkit-transition: 0.4s;
+      transition: 0.4s;
+      border-radius: 34px;
+
+      &:before {
+        position: absolute;
+        content: '';
+        height: 26px;
+        width: 26px;
+        left: 4px;
+        bottom: 4px;
+        background-color: var(--header-theme-switch-before-background-color);
+        -webkit-transition: 0.4s;
+        transition: 0.4s;
+        border-radius: 50%;
+      }
+    }
+
+    input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    input:checked + .slider {
+      background-color: var(--header-theme-switch-checked-background-color);
+    }
+
+    input:focus + .slider {
+      box-shadow: 0 0 1px var(--header-theme-switch-checked-background-color);
+    }
+
+    input:checked + .slider:before {
+      -webkit-transform: translateX(26px);
+      -ms-transform: translateX(26px);
+      transform: translateX(26px);
+    }
+  }
 }
