fix(app): Remove unused import statement
This commit removes an unused import statement in the app component to improve code cleanliness and readability.

--- a/src/app/components/cube/cube.component.html
+++ b/src/app/components/cube/cube.component.html
@@ -1,2 +1,2 @@
-<canvas #canvas id="canvas" style="height: 88vh; width: 98vw"></canvas>
+<canvas #canvas id="canvas" style="height: 80%; width: 100%"></canvas>
 <app-log [component]="component"></app-log>
