--- a/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
+++ b/src/app/components/attribute-dictionary/edit-attribute-dictionary/edit-attribute-dictionary.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h2><i class="bi bi-grid-3x3-gap"></i> Edit Attribute Dictionary</h2>
   <form [formGroup]="form" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
     <div class="row">
