--- a/src/app/components/attribute/add-attribute/add-attribute.component.html
+++ b/src/app/components/attribute/add-attribute/add-attribute.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h2><i class="bi bi-bar-chart"></i> Add Attribute</h2>
   <i class="bi bi-columns"></i>
   <span class="text-primary d-inline-flex focus-ring py-1 px-2 text-decoration-none">
