--- a/src/app/components/connection/add-connection/add-connection.component.html
+++ b/src/app/components/connection/add-connection/add-connection.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
       <h2><i class="bi bi-ethernet"></i> Add Connection</h2>
       <i class="bi bi-window-plus"></i>
       {{ this.toString(this.addConnectionForm.controls.id.value) }}
