--- a/src/app/components/connection/connection-list/connection-list.component.html
+++ b/src/app/components/connection/connection-list/connection-list.component.html
@@ -1,4 +1,4 @@
-<div class="container wrapper">
+<div class="container-fluid">
   <h2><i class="bi bi-ethernet"></i> Connections</h2>
   <table class="table table-striped table-hover">
     <thead>
@@ -33,7 +33,7 @@
           <div class="deviceid">{{ connectionObj.deviceIdTo }}</div>
         </td>
         <td>
-          <div class="btn-group" role="group" aria-label="connection-operations">
+          <div class="btn-group float-md-end" role="group" aria-label="connection-operations">
             <button type="button" class="btn btn-success btn-sm move-right" id="edit-connection"
               (click)="EditForm(connectionObj)">
               Edit
