--- a/src/app/components/connection/edit-connection/edit-connection.component.html
+++ b/src/app/components/connection/edit-connection/edit-connection.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h2><i class="bi bi-ethernet"></i> Edit Connection</h2>
   {{ this.toString(this.editConnectionForm.controls.id.value) }}
   <form [formGroup]="editConnectionForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
