--- a/src/app/components/devices/add-device/add-device.component.html
+++ b/src/app/components/devices/add-device/add-device.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h3><i class="bi bi-hdd"></i> Add Device</h3>
   <form [formGroup]="addDeviceForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
     <label>Id {{ this.addDeviceForm.controls.id.value }}</label>
