--- a/src/app/components/devices/devices-list/devices-list.component.html
+++ b/src/app/components/devices/devices-list/devices-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h3><i class="bi bi-hdd"></i> Devices</h3>
   <table class="table table-striped table-hover">
     <thead>
@@ -28,7 +28,7 @@
           }}</a>
         </td>
         <td>
-          <div class="btn-group" role="group" aria-label="device-operations">
+          <div class="btn-group  float-md-end" role="group" aria-label="device-operations">
             <button type="button" class="btn btn-success btn-sm move-right" id="edit-device" (click)="EditForm(device)">
               Edit
             </button>
