--- a/src/app/components/devices/edit-device/edit-device.component.html
+++ b/src/app/components/devices/edit-device/edit-device.component.html
@@ -1,168 +1,123 @@
-<div class="container">
-  <div class="col-md-12">
-    <h3><i class="bi bi-hdd"></i> Edit Device</h3>
-    <form [formGroup]="editDeviceForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
-      <div class="row">
-        <div class="col">
-          <label for="id" class="form-label">Id</label>
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Id"
-            aria-label="id"
-            formControlName="id"
-            formControlName="id"
-            id="id"
-            readonly
-            [ngClass]="{
+<div class="container-fluid">
+  <h3><i class="bi bi-hdd"></i> Edit Device</h3>
+  <form [formGroup]="editDeviceForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
+    <div class="row">
+      <div class="col">
+        <label for="id" class="form-label">Id</label>
+        <input type="text" class="form-control" placeholder="Id" aria-label="id" formControlName="id"
+          formControlName="id" id="id" readonly [ngClass]="{
               'is-invalid': this.editDeviceForm.controls.id.status != 'VALID',
               'is-valid': this.editDeviceForm.controls.id.status == 'VALID',
               'form-control': true
             }" />
-          <div *ngIf="this.editDeviceForm.controls.id.errors" class="invalid-feedback">
-            <div *ngIf="this.editDeviceForm.controls.id.errors.required">Id is required</div>
-            <div *ngIf="this.editDeviceForm.controls.id.errors.minlength">Id must be at least 4 characters</div>
-          </div>
+        <div *ngIf="this.editDeviceForm.controls.id.errors" class="invalid-feedback">
+          <div *ngIf="this.editDeviceForm.controls.id.errors.required">Id is required</div>
+          <div *ngIf="this.editDeviceForm.controls.id.errors.minlength">Id must be at least 4 characters</div>
         </div>
-        <div class="col">
-          <div class="form-group mb-3">
-            <label for="name" class="form-label">Name</label>
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Device's name"
-              aria-label="name"
-              formControlName="name"
-              minlength="4"
-              id="name"
-              required
-              maxlength="255"
-              [ngClass]="{
+      </div>
+      <div class="col">
+        <div class="form-group mb-3">
+          <label for="name" class="form-label">Name</label>
+          <input type="text" class="form-control" placeholder="Device's name" aria-label="name"
+            formControlName="name" minlength="4" id="name" required maxlength="255" [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.name.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.name.status == 'VALID',
                 'form-control': true
               }" />
-            <div *ngIf="this.editDeviceForm.controls.name.errors" class="invalid-feedback">
-              <div *ngIf="this.editDeviceForm.controls.name.errors.required">Name is required</div>
-              <div *ngIf="this.editDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
+          <div *ngIf="this.editDeviceForm.controls.name.errors" class="invalid-feedback">
+            <div *ngIf="this.editDeviceForm.controls.name.errors.required">Name is required</div>
+            <div *ngIf="this.editDeviceForm.controls.name.errors.minlength">Name must be at least 4 characters
             </div>
           </div>
         </div>
       </div>
-      <div class="row" formGroupName="position" class="row border">
-        <div class="row">Position</div>
-        <div class="col">
-          <div class="form-group mb-3">
-            <label for="x" class="form-label">x</label>
-            <input
-              type="text"
-              formControlName="x"
-              class="form-control"
-              id="x"
-              required
-              [ngClass]="{
+    </div>
+    <div class="row" formGroupName="position" class="row border">
+      <div class="row">Position</div>
+      <div class="col">
+        <div class="form-group mb-3">
+          <label for="x" class="form-label">x</label>
+          <input type="text" formControlName="x" class="form-control" id="x" required [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.position.controls.x.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.position.controls.x.status == 'VALID',
                 'form-control': true
               }" />
-          </div>
-          <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors" class="invalid-feedback">
-            <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors.required">Name is required</div>
-          </div>
         </div>
-        <div class="col">
-          <div class="form-group mb-3">
-            <label for="y" class="form-label">y</label>
-            <input
-              type="text"
-              formControlName="y"
-              class="form-control"
-              id="y"
-              required
-              [ngClass]="{
+        <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors" class="invalid-feedback">
+          <div *ngIf="this.editDeviceForm.controls.position.controls.x.errors.required">Name is required</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group mb-3">
+          <label for="y" class="form-label">y</label>
+          <input type="text" formControlName="y" class="form-control" id="y" required [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.position.controls.y.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.position.controls.y.status == 'VALID',
                 'form-control': true
               }" />
-          </div>
-          <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors" class="invalid-feedback">
-            <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors.required">Name is required</div>
-          </div>
         </div>
-        <div class="col">
-          <div class="form-group mb-3">
-            <label for="h" class="form-label">h</label>
-            <input
-              type="text"
-              formControlName="h"
-              class="form-control"
-              id="h"
-              required
-              [ngClass]="{
+        <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors" class="invalid-feedback">
+          <div *ngIf="this.editDeviceForm.controls.position.controls.y.errors.required">Name is required</div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group mb-3">
+          <label for="h" class="form-label">h</label>
+          <input type="text" formControlName="h" class="form-control" id="h" required [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.position.controls.h.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.position.controls.h.status == 'VALID',
                 'form-control': true
               }" />
-          </div>
-          <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError" class="invalid-feedback">
-            <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError('required')">Name is required</div>
-          </div>
+        </div>
+        <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError" class="invalid-feedback">
+          <div *ngIf="this.editDeviceForm.controls.position.controls.h.hasError('required')">Name is required</div>
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <div class="form-group mb-3">
-            <label for="modelId" class="form-label">Model</label>
-            <select
-              (change)="changeModelId($event)"
-              formControlName="modelId"
-              class="form-control"
-              id="modelId"
-              required
-              [ngClass]="{
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group mb-3">
+          <label for="modelId" class="form-label">Model</label>
+          <select (change)="changeModelId($event)" formControlName="modelId" class="form-control" id="modelId"
+            required [ngClass]="{
                 'is-invalid': this.editDeviceForm.controls.modelId.status != 'VALID',
                 'is-valid': this.editDeviceForm.controls.modelId.status == 'VALID',
                 'form-select': true
               }">
-              <option *ngFor="let modelObj of this.modelList; let i = index" value="{{ modelObj.id }}">
-                {{ modelObj.name }} ({{ modelObj.type }}/{{ modelObj.category }})
-              </option>
-            </select>
-            <div *ngIf="this.editDeviceForm.controls.modelId.errors" class="invalid-feedback">
-              <div *ngIf="this.editDeviceForm.controls.modelId.errors.required">Name is required</div>
-            </div>
+            <option *ngFor="let modelObj of this.modelList; let i = index" value="{{ modelObj.id }}">
+              {{ modelObj.name }} ({{ modelObj.type }}/{{ modelObj.category }})
+            </option>
+          </select>
+          <div *ngIf="this.editDeviceForm.controls.modelId.errors" class="invalid-feedback">
+            <div *ngIf="this.editDeviceForm.controls.modelId.errors.required">Name is required</div>
           </div>
         </div>
       </div>
-      <div class="form-group mb-3">
-        <button
-          type="submit"
-          [disabled]="!(editDeviceForm.valid && editDeviceForm.touched)"
-          class="btn btn-primary"
-          [ngClass]="{
+    </div>
+    <div class="form-group mb-3">
+      <button type="submit" [disabled]="!(editDeviceForm.valid && editDeviceForm.touched)" class="btn btn-primary"
+        [ngClass]="{
             'is-invalid': !(editDeviceForm.valid && editDeviceForm.touched),
             'is-valid': editDeviceForm.valid && editDeviceForm.touched,
             'form-control': true
           }">
-          Update
-        </button>
+        Update
+      </button>
 
-        <div *ngIf="!(editDeviceForm.invalid && editDeviceForm.touched)" class="invalid-feedback">
-          editDeviceForm is invalid or untouched
-        </div>
-        <div *ngIf="!(editDeviceForm.valid && editDeviceForm.touched)" class="valid-feedback">
-          editDeviceForm is valid and touched
-        </div>
+      <div *ngIf="!(editDeviceForm.invalid && editDeviceForm.touched)" class="invalid-feedback">
+        editDeviceForm is invalid or untouched
       </div>
-    </form>
-  </div>
+      <div *ngIf="!(editDeviceForm.valid && editDeviceForm.touched)" class="valid-feedback">
+        editDeviceForm is valid and touched
+      </div>
+    </div>
+  </form>
 </div>
 
 <!-- <div>attributeComponent: {{ attributeComponent }}</div>
 <div>attributeComponentObject: {{ attributeComponentObject }}</div> -->
 
-<app-attribute-list
-  [attributeComponent]="attributeComponent"
+<app-attribute-list [attributeComponent]="attributeComponent"
   [attributeComponentObject]="attributeComponentObject"></app-attribute-list>
 
 <app-log [component]="component"></app-log>
