--- a/src/app/components/floors/edit-floor/edit-floor.component.html
+++ b/src/app/components/floors/edit-floor/edit-floor.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h3><i class="bi bi-building"></i> Edit Floor</h3>
   <form [formGroup]="floorForm" (ngSubmit)="submitForm()" class="g-3 needs-validation" novalidate>
     <div class="form-group mb-3">
