--- a/src/app/components/floors/floor-list/floor-list.component.html
+++ b/src/app/components/floors/floor-list/floor-list.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <h3><i class="bi bi-hdd"></i> Floors</h3>
   <table class="table table-striped table-hover">
     <thead>
@@ -37,7 +37,7 @@
           </div>
         </td>
         <td>
-          <div class="btn-group" role="group" aria-label="device-operations">
+          <div class="btn-group  float-md-end" role="group" aria-label="device-operations">
             <button type="button" class="btn btn-success btn-sm move-right" id="edit-device" (click)="editFloor(floor)">
               Edit
             </button>
