--- a/src/app/components/models/add-model/add-model.component.html
+++ b/src/app/components/models/add-model/add-model.component.html
@@ -1,47 +1,20 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <h3><i
-      class="bi bi-motherboard"></i> Add Model</h3>
+    <h3><i class="bi bi-motherboard"></i> Add Model</h3>
     <form [formGroup]="addModelForm" (ngSubmit)="submitForm()" class="needs-validation" novalidate>
       <div class="row">
-        <!-- <div class="col">
-          <div class="form-group mb-3">
-            <label for="form-id" class="form-label">Id</label>
-            <input
-              type="text"
-              formControlName="id"
-              id="form-id"
-              maxlength="100"
-              minlength="1"
-              required
-              readonly
-              [ngClass]="{
-                'is-invalid': this.addModelForm.controls.id.status != 'VALID',
-                'is-valid': this.addModelForm.controls.id.status == 'VALID',
-                'form-control': true
-              }" />
-            <div *ngIf="this.addModelForm.controls.id.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.controls.id.errors.required">Id is required</div>
-              <div *ngIf="this.addModelForm.controls.id.errors.minlength">Id must be at least 4 characters</div>
-            </div>
-          </div>
-        </div> -->
         <div class="col">
           <div class="form-group mb-3">
             <label for="name" class="form-label">Name</label>
-            <input
-              [ngClass]="{
+            <input [ngClass]="{
                 'is-invalid': this.addModelForm.controls.name.status != 'VALID',
                 'is-valid': this.addModelForm.controls.name.status == 'VALID',
                 'form-control': true
-              }"
-              formControlName="name"
-              minlength="4"
-              id="name"
-              maxlength="255" />
+              }" formControlName="name" minlength="4" id="name" maxlength="255" />
             <div *ngIf="this.addModelForm.controls.name.errors" class="invalid-feedback">
               <div *ngIf="this.addModelForm.controls.name.errors.required">Name is required</div>
-              <div *ngIf="this.addModelForm.controls.name.errors.minlength">Name must be at least 4 characters</div>
+              <div *ngIf="this.addModelForm.controls.name.errors.minlength">Name must be at least 4 characters
+              </div>
             </div>
           </div>
         </div>
@@ -50,26 +23,19 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="width" class="form-label">Width</label>
-            <input
-              type="text"
-              formControlName="width"
-              id="width"
-              maxlength="6"
-              minlength="1"
-              required
-              [ngClass]="{
+            <input type="text" formControlName="width" id="width" maxlength="6" minlength="1" required [ngClass]="{
                 'is-invalid': this.addModelForm.controls.dimension.controls.width.status != 'VALID',
                 'is-valid': this.addModelForm.controls.dimension.controls.width.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.addModelForm.controls.dimension.controls.width.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.controls.dimension.controls.width.errors.required">Width is required</div>
+              <div *ngIf="this.addModelForm.controls.dimension.controls.width.errors.required">Width is required
+              </div>
               <div *ngIf="this.addModelForm.controls.dimension.controls.width.errors.minlength">
                 Width must be at least 1 number.
               </div>
             </div>
-            <div
-              class="form-control-feedback"
+            <div class="form-control-feedback"
               *ngIf="addModelForm.errors && (addModelForm.dirty || addModelForm.touched)">
               <p *ngIf="addModelForm.errors.pattern" class="text-danger">Number Only</p>
             </div>
@@ -78,20 +44,14 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="heigth" class="form-label">Height</label>
-            <input
-              type="text"
-              formControlName="height"
-              id="heigth"
-              maxlength="6"
-              minlength="1"
-              required
-              [ngClass]="{
+            <input type="text" formControlName="height" id="heigth" maxlength="6" minlength="1" required [ngClass]="{
                 'is-invalid': this.addModelForm.controls.dimension.controls.height.status != 'VALID',
                 'is-valid': this.addModelForm.controls.dimension.controls.height.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.addModelForm.controls.dimension.controls.height.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.controls.dimension.controls.height.errors.required">Height is required</div>
+              <div *ngIf="this.addModelForm.controls.dimension.controls.height.errors.required">Height is required
+              </div>
               <div *ngIf="this.addModelForm.controls.dimension.controls.height.errors.minlength">
                 Height must be at least 1 number
               </div>
@@ -101,20 +61,14 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="depth" class="form-label">Depth</label>
-            <input
-              type="text"
-              formControlName="depth"
-              id="depth"
-              maxlength="4"
-              minlength="1"
-              required
-              [ngClass]="{
+            <input type="text" formControlName="depth" id="depth" maxlength="4" minlength="1" required [ngClass]="{
                 'is-invalid': this.addModelForm.controls.dimension.controls.depth.status != 'VALID',
                 'is-valid': this.addModelForm.controls.dimension.controls.depth.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.addModelForm.controls.dimension.controls.depth.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.controls.dimension.controls.depth.errors.required">Depth is required</div>
+              <div *ngIf="this.addModelForm.controls.dimension.controls.depth.errors.required">Depth is required
+              </div>
               <div *ngIf="this.addModelForm.controls.dimension.controls.depth.errors.minlength">
                 Depth must be at least 1 number
               </div>
@@ -126,17 +80,14 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="front" class="form-label">Front</label>
-            <input
-              type="text"
-              formControlName="front"
-              id="front"
-              [ngClass]="{
+            <input type="text" formControlName="front" id="front" [ngClass]="{
                 'is-invalid': this.addModelForm.controls.texture.controls.front.status != 'VALID',
                 'is-valid': this.addModelForm.controls.texture.controls.front.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.front.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.controls.texture.controls.front.errors.required">Width is required</div>
+              <div *ngIf="this.addModelForm.controls.texture.controls.front.errors.required">Width is required
+              </div>
               <div *ngIf="this.addModelForm.controls.texture.controls.front.errors.minlength">
                 Width must be at least 1 number.
               </div>
@@ -146,17 +97,14 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="back" class="form-label">Back</label>
-            <input
-              type="text"
-              formControlName="back"
-              id="back"
-              [ngClass]="{
+            <input type="text" formControlName="back" id="back" [ngClass]="{
                 'is-invalid': this.addModelForm.controls.texture.controls.back.status != 'VALID',
                 'is-valid': this.addModelForm.controls.texture.controls.back.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.back.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.controls.texture.controls.back.errors.required">back side is required</div>
+              <div *ngIf="this.addModelForm.controls.texture.controls.back.errors.required">back side is required
+              </div>
               <div *ngIf="this.addModelForm.controls.texture.controls.back.errors.minlength">
                 back must be at least 1 number
               </div>
@@ -166,11 +114,7 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="side" class="form-label">Side</label>
-            <input
-              type="text"
-              formControlName="side"
-              id="side"
-              [ngClass]="{
+            <input type="text" formControlName="side" id="side" [ngClass]="{
                 'is-invalid': this.addModelForm.controls.texture.controls.side.status != 'VALID',
                 'is-valid': this.addModelForm.controls.texture.controls.side.status == 'VALID',
                 'form-control': true
@@ -186,35 +130,29 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="top" class="form-label">Top</label>
-            <input
-              type="text"
-              formControlName="top"
-              id="top"
-              [ngClass]="{
+            <input type="text" formControlName="top" id="top" [ngClass]="{
                 'is-invalid': this.addModelForm.controls.texture.controls.top.status != 'VALID',
                 'is-valid': this.addModelForm.controls.texture.controls.top.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.top.errors" class="invalid-feedback">
               <div *ngIf="this.addModelForm.controls.texture.controls.top.errors">Top is required</div>
-              <div *ngIf="this.addModelForm.controls.texture.controls.top.errors">Top must be at least 1 number</div>
+              <div *ngIf="this.addModelForm.controls.texture.controls.top.errors">Top must be at least 1 number
+              </div>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="form-group mb-3">
             <label for="botom" class="form-label">Botom</label>
-            <input
-              type="text"
-              formControlName="botom"
-              id="botom"
-              [ngClass]="{
+            <input type="text" formControlName="botom" id="botom" [ngClass]="{
                 'is-invalid': this.addModelForm.controls.texture.controls.botom.status != 'VALID',
                 'is-valid': this.addModelForm.controls.texture.controls.botom.status == 'VALID',
                 'form-control': true
               }" />
             <div *ngIf="this.addModelForm.controls.texture.controls.botom.errors" class="invalid-feedback">
-              <div *ngIf="this.addModelForm.controls.texture.controls.botom.errors.required">Botom is required</div>
+              <div *ngIf="this.addModelForm.controls.texture.controls.botom.errors.required">Botom is required
+              </div>
               <div *ngIf="this.addModelForm.controls.texture.controls.botom.errors.minlength">
                 Botom must be at least 2 characters
               </div>
@@ -226,15 +164,11 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="type" class="form-label">Type</label>
-            <select
-              (change)="changeType($event)"
-              formControlName="type"
-              [ngClass]="{
+            <select (change)="changeType($event)" formControlName="type" [ngClass]="{
                 'is-invalid': this.addModelForm.controls.type.status != 'VALID',
                 'is-valid': this.addModelForm.controls.type.status == 'VALID',
                 'form-select': true
-              }"
-              id="type">
+              }" id="type">
               <option *ngFor="let typeObj of deviceTypeDict.list; let i = index">
                 {{ typeObj.name }}
               </option>
@@ -247,15 +181,11 @@
         <div class="col">
           <div class="form-group mb-3">
             <label for="category" class="form-label">Category</label>
-            <select
-              (change)="changeCategory($event)"
-              formControlName="category"
-              [ngClass]="{
+            <select (change)="changeCategory($event)" formControlName="category" [ngClass]="{
                 'is-invalid': this.addModelForm.controls.category.status != 'VALID',
                 'is-valid': this.addModelForm.controls.category.status == 'VALID',
                 'form-select': true
-              }"
-              id="category">
+              }" id="category">
               <option *ngFor="let categoryObj of deviceCategoryDict.list; let i = index">
                 {{ categoryObj.name }}
               </option>
@@ -268,12 +198,8 @@
       </div>
       <div class="row">
         <div class="col">
-          <button
-            type="button"
-            [disabled]="!(addModelForm.valid && addModelForm.touched)"
-            class="btn btn-primary"
-            (click)="this.submitForm()"
-            tooltip="Update device.">
+          <button type="button" [disabled]="!(addModelForm.valid && addModelForm.touched)" class="btn btn-primary"
+            (click)="this.submitForm()" tooltip="Update device.">
             Add
           </button>
         </div>
