--- a/src/app/components/models/edit-model/edit-model.component.html
+++ b/src/app/components/models/edit-model/edit-model.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
       <h3><i class="bi bi-motherboard"></i> Edit Model</h3>
